--- a/Shary-Task/Product List/View/ProductListViewController.xib
+++ b/Shary-Task/Product List/View/ProductListViewController.xib
@@ -1,22 +1,84 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductListViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductListViewController" customModule="Shary_Task" customModuleProvider="target">
             <connections>
+                <outlet property="colProducts" destination="0Kt-Dr-uTM" id="jlH-V3-18z"/>
+                <outlet property="lblHeader" destination="ONv-bd-bfe" id="Ois-XC-NVS"/>
+                <outlet property="lblUserName" destination="Tm0-P2-nlS" id="tD8-G9-NOA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K54-Fp-G5c">
+                    <rect key="frame" x="0.0" y="44" width="414" height="50"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="CbU-y6-peQ">
+                            <rect key="frame" x="30" y="4" width="41.5" height="42"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONv-bd-bfe">
+                                    <rect key="frame" x="0.0" y="0.0" width="41.5" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tm0-P2-nlS">
+                                    <rect key="frame" x="0.0" y="21" width="41.5" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="CbU-y6-peQ" firstAttribute="leading" secondItem="K54-Fp-G5c" secondAttribute="leading" constant="30" id="2Le-kZ-hra"/>
+                        <constraint firstItem="CbU-y6-peQ" firstAttribute="top" secondItem="K54-Fp-G5c" secondAttribute="top" constant="4" id="AmS-bB-am2"/>
+                        <constraint firstAttribute="height" constant="50" id="MMJ-d9-CEI"/>
+                        <constraint firstAttribute="bottom" secondItem="CbU-y6-peQ" secondAttribute="bottom" constant="4" id="lfM-ZP-4Ee"/>
+                    </constraints>
+                </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0Kt-Dr-uTM">
+                    <rect key="frame" x="0.0" y="94" width="414" height="768"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1xD-Cr-OeY">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="K54-Fp-G5c" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="D9R-Zy-Spu"/>
+                <constraint firstItem="0Kt-Dr-uTM" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="KfP-cd-dON"/>
+                <constraint firstItem="0Kt-Dr-uTM" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="cW4-rI-lt7"/>
+                <constraint firstItem="0Kt-Dr-uTM" firstAttribute="top" secondItem="K54-Fp-G5c" secondAttribute="bottom" id="drI-aY-7sj"/>
+                <constraint firstItem="0Kt-Dr-uTM" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="nuW-Qw-dUR"/>
+                <constraint firstItem="K54-Fp-G5c" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qXV-hh-TBG"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="K54-Fp-G5c" secondAttribute="trailing" id="sBO-VO-GFF"/>
+            </constraints>
+            <point key="canvasLocation" x="0.0" y="51.5625"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
