--- a/Shary-Task/Product List/View/Cell/ProductListCollectionViewCell.xib
+++ b/Shary-Task/Product List/View/Cell/ProductListCollectionViewCell.xib
@@ -19,22 +19,28 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oa8-fL-KeB">
-                        <rect key="frame" x="0.0" y="4" width="390" height="175"/>
+                        <rect key="frame" x="0.0" y="4" width="390" height="134.5"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F3b-pZ-kKW">
-                        <rect key="frame" x="4" y="216" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKM-u3-J0B" userLabel="Price">
+                        <rect key="frame" x="4" y="173.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dow-eK-pLk">
-                        <rect key="frame" x="4" y="187" width="381" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F3b-pZ-kKW" userLabel="Category">
+                        <rect key="frame" x="4" y="200.5" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dow-eK-pLk" userLabel=" Title">
+                        <rect key="frame" x="4" y="146.5" width="381" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="goz-PB-IlG">
-                        <rect key="frame" x="280" y="216" width="106" height="21"/>
+                        <rect key="frame" x="280" y="200.5" width="106" height="21"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="69p-Pq-xUu">
                                 <rect key="frame" x="4" y="4.5" width="14" height="12"/>
@@ -42,13 +48,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWW-ot-gxI" userLabel="Rating Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWW-ot-gxI" userLabel="Rating">
                                 <rect key="frame" x="18" y="0.0" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aT3-gE-81q" userLabel="Count Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aT3-gE-81q" userLabel="Count">
                                 <rect key="frame" x="60" y="0.0" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -73,17 +79,19 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="F3b-pZ-kKW" firstAttribute="top" secondItem="yKM-u3-J0B" secondAttribute="bottom" constant="6" id="0J5-0C-B5S"/>
                 <constraint firstItem="F3b-pZ-kKW" firstAttribute="leading" secondItem="Dow-eK-pLk" secondAttribute="leading" id="AgI-Rd-xIm"/>
                 <constraint firstItem="goz-PB-IlG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="F3b-pZ-kKW" secondAttribute="trailing" constant="8" id="MHy-Dz-jBZ"/>
                 <constraint firstItem="oa8-fL-KeB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="4" id="OiD-zu-7Zp"/>
                 <constraint firstItem="Dow-eK-pLk" firstAttribute="top" secondItem="oa8-fL-KeB" secondAttribute="bottom" constant="8" id="R7J-ds-F4v"/>
                 <constraint firstAttribute="trailing" secondItem="Dow-eK-pLk" secondAttribute="trailing" constant="5" id="bz8-Ym-eWX"/>
                 <constraint firstItem="oa8-fL-KeB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="dyz-oj-izQ"/>
+                <constraint firstItem="Dow-eK-pLk" firstAttribute="bottom" secondItem="yKM-u3-J0B" secondAttribute="top" constant="-6" id="enp-9o-kJH"/>
                 <constraint firstItem="goz-PB-IlG" firstAttribute="top" secondItem="F3b-pZ-kKW" secondAttribute="top" id="flD-62-NPx"/>
+                <constraint firstItem="yKM-u3-J0B" firstAttribute="leading" secondItem="Dow-eK-pLk" secondAttribute="leading" id="gan-Lt-Haf"/>
                 <constraint firstItem="Dow-eK-pLk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="gxF-Io-why"/>
                 <constraint firstAttribute="trailing" secondItem="oa8-fL-KeB" secondAttribute="trailing" id="iUb-jr-Vnc"/>
-                <constraint firstItem="F3b-pZ-kKW" firstAttribute="top" secondItem="Dow-eK-pLk" secondAttribute="bottom" constant="8" id="ikE-Qb-8Uu"/>
-                <constraint firstItem="oa8-fL-KeB" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.65" id="kxW-zy-2c2"/>
+                <constraint firstItem="oa8-fL-KeB" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.5" id="kxW-zy-2c2"/>
                 <constraint firstAttribute="trailing" secondItem="goz-PB-IlG" secondAttribute="trailing" constant="4" id="nHt-h1-dVD"/>
                 <constraint firstItem="oa8-fL-KeB" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="p1z-9W-KP9"/>
             </constraints>
@@ -92,6 +100,7 @@
                 <outlet property="imgProduct" destination="oa8-fL-KeB" id="XgP-i8-ndw"/>
                 <outlet property="lblCategory" destination="F3b-pZ-kKW" id="n4a-uv-cBA"/>
                 <outlet property="lblCount" destination="aT3-gE-81q" id="zQa-8t-Vnq"/>
+                <outlet property="lblPrice" destination="yKM-u3-J0B" id="h3b-8q-jX9"/>
                 <outlet property="lblRating" destination="JWW-ot-gxI" id="I4s-Cc-0nC"/>
                 <outlet property="lblTitle" destination="Dow-eK-pLk" id="gLq-Di-t52"/>
             </connections>
